--- a/docs/release-notes/release-2024-04-02.md
+++ b/docs/release-notes/release-2024-04-02.md
@@ -7,7 +7,7 @@ title: 0.41.0 March 2024
 See TypeSpec Core 0.55 [release notes](https://typespec.io/docs/release-notes/release-2024-04-02)
 
 :::warn
-This release contains breaking deprecations
+This release contains breaking changes
 :::
 
 ## Breaking Changes
