--- a/docs/release-notes/release-2024-04-02.md
+++ b/docs/release-notes/release-2024-04-02.md
@@ -19,7 +19,7 @@ API breaking changes:
 - [#451](https://github.com/Azure/typespec-azure/pull/451) adjust generated discriminator property sequence to prevent potential breaking change
 - [#459](https://github.com/Azure/typespec-azure/pull/459) enums are always fixed after we switch to use union to represent extensible enum
 - [#444](https://github.com/Azure/typespec-azure/pull/444) SdkUnionType, SdkEnumType, and SdkModelType will now always have a `.name` property. `.isGeneratedName` is now a boolean that expresses whether the `.name` was generated or described in the tsp
-- [#524](https://github.com/Azure/typespec-azure/pull/524) depcreate getParameterMapping and make .bodyParam on SdkHttpOperation a single optional param instead of list
+- [#524](https://github.com/Azure/typespec-azure/pull/524) deprecate getParameterMapping and make .bodyParam on SdkHttpOperation a single optional param instead of list
 - [#536](https://github.com/Azure/typespec-azure/pull/536) git status
 - [#515](https://github.com/Azure/typespec-azure/pull/515) change responses from a record to a mapping of status code, range, or default
 
