--- a/docs/release-notes/release-2024-04-02.md
+++ b/docs/release-notes/release-2024-04-02.md
@@ -50,7 +50,7 @@ API breaking changes:
 
 ### @azure-tools/typespec-autorest
 
-- [#407](https://github.com/Azure/typespec-azure/pull/407) Add support for new `Azure.Core.armResourceManager` scalar
+- [#407](https://github.com/Azure/typespec-azure/pull/407) Add support for new `Azure.Core.armResourceIdentifier` scalar
 
 ### @azure-tools/typespec-azure-core
 
