--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -483,7 +483,7 @@ from enum import Enum
 from corehttp.utils import CaseInsensitiveEnumMeta
 
 class ProvisioningState(str, Enum, metaclass=CaseInsensitiveEnumMeta):
-  INPRPGRESS = "InProgress"
+  INPROGRESS = "InProgress"
   SUCCEEDED = "Succeeded"
   FAILED = "Failed"
   CANCELED = "Canceled"
