Add missing entry to changelog

--- a/docs/release-notes/release-2024-04-02.md
+++ b/docs/release-notes/release-2024-04-02.md
@@ -64,6 +64,7 @@ API breaking changes:
 
 ### @azure-tools/typespec-azure-resource-manager
 
+- [376](https://github.com/Azure/typespec-azure/pull/376) `RetryAfter` header was moved to be in the default `LroHeaders` for LRO operations. If you were overriding the `LroHeaders` template parmater previously you might need to add `& Azure.Core.FoundationsRetryAfterHeader`
 - [#495](https://github.com/Azure/typespec-azure/pull/495) Made `delegatedIdentityClientId` optional `CustomerManagedKeyEncryption` to align with the common types definition.
 - [#514](https://github.com/Azure/typespec-azure/pull/514) Add `lro-location-header` rule.
 - [#369](https://github.com/Azure/typespec-azure/pull/369) Add `arm-put-operation-response-codes` and `arm-post-operation-response-codes` rules.
