--- a/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
@@ -267,7 +267,7 @@ def upload(user: User) -> None:
 ```java
 // model class
 @Immutable
-public final cass User implements JsonSerializable<User> {
+public final class User implements JsonSerializable<User> {
     public User(String firstName, String lastName);
     public String getFirstName();
     public String getLastName();
@@ -340,7 +340,7 @@ def upload(userRequest: UserRequest) -> None:
 ```java
 // model class
 @Immutable
-public final cass User implements JsonSerializable<User> {
+public final class User implements JsonSerializable<User> {
     public User(String firstName, String lastName);
     public String getFirstName();
     public String getLastName();
